[package]
name = "times_notifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["rt", "rt-multi-thread", "macros"] }
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next" }
once_cell = "1.18.0"
dotenvy = "0.15.7"
log = "0.4.20"
env_logger = "0.10.1"
chrono = "0.4.31"
regex = "1.10.2"
rustflakes = { git = "https://github.com/Not-Nik/rustflakes" }